2013-01-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r140983.
        http://trac.webkit.org/changeset/140983
        https://bugs.webkit.org/show_bug.cgi?id=108277

        Unfortunately, this API has one last client (Requested by
        abarth on #webkit).

        * Configurations/FeatureDefines.xcconfig:

2012-11-28  Jer Noble  <jer.noble@apple.com>

        Allow clients to ask for the WebView/WKView placeholder view when in full screen mode.
        https://bugs.webkit.org/show_bug.cgi?id=103558
        <rdar://problem/12763112>

        Reviewed by Benjamin Poulain.

        Clients may want to behave differently when their WebView/WKView has been swapped out by a placeholder
        view when in full screen mode.  Add a simple accessor for the existing placeholder view to
        WebFullScreenController and WebView.

        * WebView/WebFullScreenController.h:
        * WebView/WebFullScreenController.mm:
        (-[WebFullScreenController webViewPlaceholder]): Added simple accessor.
        * WebView/WebView.mm:
        (-[WebView fullScreenPlaceholderView]): Added simple accessor.

2013-01-28  Pratik Solanki  <psolanki@apple.com>

        PLATFORM(IOS) should come before __MAC_OS_X_VERSION_MIN_REQUIRED
        https://bugs.webkit.org/show_bug.cgi?id=108101

        Reviewed by Benjamin Poulain.

        Since iOS does not define __MAC_OS_X_VERSION_MIN_REQUIRED, any usage of
        __MAC_OS_X_VERSION_MIN_REQUIRED should be after a PLATFORM(IOS) check.

        * WebCoreSupport/WebSystemInterface.mm:
        (InitWebCoreSystemInterface):

2013-01-28  Joseph Pecoraro  <pecoraro@apple.com>

        [Mac] Update PageVisibilityState when WebView is hidden / visible
        https://bugs.webkit.org/show_bug.cgi?id=107509

        Reviewed by Sam Weinig.

        * WebView/WebView.mm:
        * WebView/WebViewPrivate.h:
        (-[WebView _commonInitializationWithFrameName:groupName:]):